--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <nav class="navbar navbar-expand-sm ld-bg navbar-dark sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"> <img src="images/logo-banner.svg" alt="Homepage" style="width: 480px; height: 270px;"></a>
+        <a class="navbar-brand" href="index.html"> <img src="images/logo-banner.svg" alt="Homepage" style="width: 480px; height: 270px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
