Update RO committee 'About' text to fix inaccuracy

--- a/committee.html
+++ b/committee.html
@@ -109,7 +109,7 @@
                         <h2 class="card-title">The Vice-President</h2>
                         <h3 class="card-fullname">Sebastian Evans</h3>
                         <p class="card-college"><i>The Queen's College</i></p>
-                        <p class="card-text">The Vice-President is the second-in-command at the Society and helps The President with day-to-day operations, strategy and implementing Presidential decisions.</p>
+                        <p class="card-text">The Vice-President is the second-in-command at the Society and helps The President with day-to-day operations, strategy and implementing Committee and Executive wishes.</p>
                         <a href="mailto:vicepresident@oxuniliberals.com" class="btn-email">Email: The Vice-President</a>
                     </div>
                 </div>
@@ -149,7 +149,7 @@
                         <h2 class="card-title">The Returning Officer</h2>
                         <h3 class="card-fullname">Julian Wang</h3>
                         <p class="card-college"><i>University College</i></p>
-                        <p class="card-text">The Returning Officer (RO)'s role is to certify election results, ensure elections are fair and taking action when there is suspected electoral malpractice. Please contact the RO regarding any and all election-related queries.</p>
+                        <p class="card-text">The Returning Officer (RO)'s primary role is to manage society elections. The RO's secondary role is to interpret the Standing Orders.</p>
                         <a href="mailto:vicepresident@oxuniliberals.com" class="btn-email">Email: The Returning Officer</a>
                     </div>
                 </div>
