Add Standing Orders MT24

--- a/documents.html
+++ b/documents.html
@@ -91,6 +91,11 @@
                 </div>
             </div>
         </div>
+        <!-- <div class="text-center mt-4">
+          <h2>Are you looking into our current rules?</h2>
+          <p>If so, please feel free to contact us and we will be happy to add any older documents to our archive from the Association.</p>
+      </div> -->
+
         <div class="text-center mt-4">
             <h2>Would you like to contribute towards our historical archive?</h2>
             <p>If so, please feel free to contact us and we will be happy to add any older documents to our archive from the Association.</p>
