Update 'documents' button links to reflect new GitHub file structure

--- a/documents.html
+++ b/documents.html
@@ -87,14 +87,11 @@
                 <div class="d-flex flex-column align-items-center">
                     <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Termcards">Termcards</a></button>
                     <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Magazines">Magazines</a></button>
-                    <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents">General Documents</a></button>
+                    <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Standing%20Orders">Standing Orders</a></button>
+                    <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Minutes">Minutes</a></button>
                 </div>
             </div>
         </div>
-        <!-- <div class="text-center mt-4">
-          <h2>Are you looking into our current rules?</h2>
-          <p>If so, please feel free to contact us and we will be happy to add any older documents to our archive from the Association.</p>
-      </div> -->
 
         <div class="text-center mt-4">
             <h2>Would you like to contribute towards our historical archive?</h2>
