Update alumni page to inform old alumni of our past names

--- a/alumni.html
+++ b/alumni.html
@@ -86,14 +86,34 @@
         </div>
     </section>
     <section class="presidents-welcome container my-7 text-center">
+      <div class="row">
+          <div class="col-md-12">
+              <h1>Oxford University Liberal Democrats ... and our other historical names!</h1>
+              <p>The Oxford University Liberal Democrats changed its name in Trinity 2024 to the Oxford University Liberal Association. Predecessor Societies also include the OU Social and Liberal Democrats, Oxford Students Alliance Society, Oxford Students Liberal Society, Oxford Union of Liberal Students and OU Liberal Club. if you've ever been a member of OULD or any of its predecessors, we would be delighted to hear from you as we try to build our alumni networks up!</p>
+          </div>
+      </div>
+    </section>
+
+
+    <section class="presidents-welcome container my-7 text-center">
+      <div class="row">
+          <div class="col-md-12">
+              <h1>Notable Alumni</h1>
+              <p>One President and one Treasurer of the Society have gone on to be Prime Minister of the United Kingdom - <a href="https://en.wikipedia.org/wiki/Liz_Truss">Liz Truss</a> (Conservative), President 1995 and <a href="https://en.wikipedia.org/wiki/Harold_Wilson">Harold Wilson</a> (Labour), Treasurer 1935 - though perhaps we should be conscious that neither of them was a Liberal or Liberal Democrat PM. Other notable alumni of the Society include: <a href="https://en.wikipedia.org/wiki/Benazir_Bhutto">Benazir Bhutto</a>, <a href="https://en.wikipedia.org/wiki/Clement_Attlee">Clement Attlee</a>, <a href="https://en.wikipedia.org/wiki/Michael_Foot">Michael Foot</a> and <a href="https://en.wikipedia.org/wiki/Ed_Davey">Ed Davey</a>.</p>
+          </div>
+      </div>
+    </section>
+
+    <section class="presidents-welcome container my-7 text-center">
         <div class="row">
             <div class="col-md-12">
                 <h1>Join the Emeritus Committee</h1>
                 <p><a href="https://forms.gle/Y2G5wKE45cimDUxg9">Click here for The Emeritus Committee Form</a></p>
                 <p>This form is for ex Senior Officers (President, Vice President, Treasurer and Returning Officer, and other roles of equivalent seniority) of the Society to join the Emeritus Committee, the body that elects the Senior Member and Returning Officer and also handles electoral and disciplinary issues. It is called extremely rarely, and so your commitment would be zero for 99% of the year- but regardless your service would be greatly appreciated. Please do leave your email in the form, and when you're required we will send you an email - but please know that you're under no obligation to answer the call.</p>
-                <h1> ... otherwise, please feel free to reach out to us if you are an old OULA member!</h1>
+                <h1> ... if you've ever been a member of OULD or any of its predecessors, we would be delighted to hear from you as we try to build our alumni networks up!</h1>
             </div>
         </div>
+      </section>
     <hr class="container my-5">
     <!-- preloader
     ================================================== -->
