--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                     <section id="about">
                         <h2>About OULA</h2>
                         <p>The Oxford University Liberal Association (OULA) is the student branch of the Liberal Democrats for Oxford students. Our purpose is to support, develop, improve and promote the policies and candidates of the Liberal Democrats and liberal values within the City of Oxford and the Universities.</p>
-                        <p>We are affiliated with the federal Young Liberals and are actively involved in activism and campaigning alongside them.</p>
+                        <p>The Oxford University Liberal Democrats changed its name in Trinity 2024 to the Oxford University Liberal Association. Predecessor Societies also include the OU Social and Liberal Democrats, Oxford Students Alliance Society, Oxford Students Liberal Society, Oxford Union of Liberal Students and OU Liberal Club.</p>
                     </section>
             
                     <section id="history">
@@ -133,7 +133,7 @@
                             <div class="container left">
                                 <div class="content">
                                     <h3>2024 - </h3>
-                                    <p>Renaming of organisation to Oxford University Liberal Association (OULA) reflecting a broader liberal appeal. This new website was launched at the same time.</p>
+                                    <p>Renaming of organisation to Oxford University Liberal Association (OULA) reflecting a broader liberal appeal under the new President, Zagham Farhan. This new website was launched at the same time.</p>
                                 </div>
                             </div>
                         </div>
