Add Donations page and assorted links across all pages.

--- a/mailing-list.html
+++ b/mailing-list.html
@@ -113,43 +113,42 @@
 
 </body>
 <footer class="site-footer">
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-logo">
-          <img src="images/logo.svg" alt="OULA Logo" width="480" height="270">
-        </div>
-        <div class="footer-links">
-          <h3>OULA Quick Links</h3>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="join.html">Join</a></li>
-            <li><a href="documents.html">Termcards</a></li>
-            <li><a href="documents.html">Magazines</a></li>
-            <li><a href="documents.html">Documents</a></li>
-            <li><a href="committee.html">Committee</a></li>
-            <li><a href="alumni.html">Alumni</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-        <div class="footer-social">
-          <h3>Follow OULA!</h3>
-          <ul>
-            <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="https://www.linkedin.com/company/oxford-university-liberal-democrats"><i class="fab fa-linkedin-in"></i></a></li>
-          </ul>
-        </div>
-        <div class="footer-subscribe">
-          <h3><a href="mailing-list.html">Click here to join OULA's Mailing List</a></h3>
-                  
-        </div>
+  <div class="container">
+    <div class="footer-content">
+      <div class="footer-logo">
+        <img src="images/logo.svg" alt="OULA Logo" width="480" height="270">
       </div>
-      <div class="footer-bottom">
-        <p>Copyright 2024 - The Oxford University Liberal Association (OULA) - Liberal since 1913</p>
-        <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
+      <div class="footer-links">
+        <h3>OULA Quick Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="join.html">Join</a></li>
+          <li><a href="documents.html">Documents</a></li>
+          <li><a href="committee.html">Committee</a></li>
+          <li><a href="alumni.html">Alumni</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="donate.html">Donate</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-social">
+        <h3>Follow OULA!</h3>
+        <ul>
+          <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/company/oxford-university-liberal-democrats"><i class="fab fa-linkedin-in"></i></a></li>
+        </ul>
+      </div>
+      <div class="footer-subscribe">
+        <h3><a href="mailing-list.html">Click here to join OULA's Mailing List</a></h3>
+                
       </div>
     </div>
-  </footer>
+    <div class="footer-bottom">
+      <p>Copyright 2024 - The Oxford University Liberal Association (OULA) - Liberal since 1913</p>
+      <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
+    </div>
+  </div>
+</footer>
 
 </html>
