--- a/committee.html
+++ b/committee.html
@@ -245,12 +245,11 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
-          <li><a href="documents.html">Termcards</a></li>
-          <li><a href="documents.html">Magazines</a></li>
           <li><a href="documents.html">Documents</a></li>
           <li><a href="committee.html">Committee</a></li>
           <li><a href="alumni.html">Alumni</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="donate.html">Donate</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
