Update JOIN page with reminder of Instagram account

--- a/join.html
+++ b/join.html
@@ -83,6 +83,9 @@
         <div class="row">
             <div class="col-md-8 mx-auto text-center">
                 <h1 style="color: #FAA61A;">Join our ranks!</h1>
+                <h2>All events are posted to OULA's Instagram!</h2>
+                <a href="https://www.instagram.com/oxuniliberals/" class="fab fa-instagram"> Follow OULA on Instagram</a>
+                
             </div>
         </div>
         <div class="row">
