Fresher-Proof wording of Eligibility Criteria

--- a/join.html
+++ b/join.html
@@ -100,7 +100,7 @@
                 </ol>
                 <p>OULA only uses '@oxuniliberals.com' email addresses for communications with members. Please check your 'spam' regularly.</p>
                 <h3>The OULA Eligibility Criteria</h3>
-                <p>Only students of either of the Oxford Universities are eligible to join OULA. Please feel free to contact us if you have any queries regarding membership criteria.</p>
+                <p>Only students of either of the Oxford Universities (the University of Oxford OR the Oxford Brookes University) are eligible to join OULA. Please feel free to contact us if you have any queries regarding membership criteria.</p>
 
                 <h3> ... Alumni?</h3>
                 <p>Once OULA, always OULA ... we always enjoy hearing from alumni of the Association. OULA members have gone on to do great things ... some even as Prime Ministers of the United Kingdom! <a href="alumni.html">Please click here to go to the Alumni page. </a></p>
