--- a/documents.html
+++ b/documents.html
@@ -51,16 +51,19 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="documents.html" style="color: #FAA61A;">Documents</a>
+              <a class="navbar-nav nav-link" href="about.html" style="color: #FAA61A;">About</a>
             </li>
             <li class="nav-item">
               <a class="navbar-nav nav-link" href="committee.html" style="color: #FAA61A;">Committee</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="alumni.html" style="color: #FAA61A;">Alumni</a>
+              <a class="navbar-nav nav-link" href="documents.html" style="color: #FAA61A;">Documents</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="about.html" style="color: #FAA61A;">About</a>
+              <a class="navbar-nav nav-link" href="donate.html" style="color: #FAA61A;">Donate</a>
+            </li>
+            <li class="nav-item">
+              <a class="navbar-nav nav-link" href="alumni.html" style="color: #FAA61A;">Alumni</a>
             </li>
             <li class="nav-item">
               <a class="navbar-nav nav-link" href="contact.html" style="color: #FAA61A;">Contact</a>
