Fix welcome message sign-off padding

--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
                           Throughout this website, fabulously put together by our Outreach Officer Hayden Williams, you will find everything you need about our society; from the termly magazine to the membership form - and of course the all important termcard! Members of the Committee are always keen to hear from new and prospective members so feel free to reach out to any one of us. 
                           We're delighted that you've found our website, and we hope to see you at one of our events soon.
                         </p>
-                        <p>Liberally Yours,</p>
-                        <p></p>
-                        <p>Zagham Farhan</p>
-                        <p style="font-size: 0.9em;">The President - <i style="font-size: 0.9em;">University College</i></p>
+                        <p class="signoff" style="margin-bottom: 0;">Yours Liberally,</p>
+                        <p class="president-signoff" style="font-size: 0.9em; margin-top: 0;">Zagham Farhan</p>
+                        <p class="president-signoff" style="font-size: 0.9em; margin-top: 0;">The President - <i style="font-size: 0.9em;">University College</i></p>
                         <span class="badge bg-primary">Michaelmas Term 2024</span>
                     </div>
                 </div>
