Update about to include info on society 'socials'

--- a/about.html
+++ b/about.html
@@ -93,6 +93,12 @@
                         <p>The Oxford University Liberal Association (OULA) is the student branch of the Liberal Democrats for Oxford students. Our purpose is to support, develop, improve and promote the policies and candidates of the Liberal Democrats and liberal values within the City of Oxford and the Universities.</p>
                         <p>The Oxford University Liberal Democrats changed its name in Trinity 2024 to the Oxford University Liberal Association. Predecessor Societies also include the OU Social and Liberal Democrats, Oxford Students Alliance Society, Oxford Students Liberal Society, Oxford Union of Liberal Students and OU Liberal Club.</p>
                     </section>
+
+                    <section id="socials">
+                      <h2>Our Socials</h2>
+                      <p>During Oxford's Term, we have our flagship Liquor & Liberalism (L&L) event with discounted rates on drinks for members and lively debating! We regularly partake in Crewdates with OUCA (Oxford University Conservative Association) and other societies around Oxford ... and many more events including Speaker events. Whether you are Liberal politically or not, you are welcome at OULA!</p>
+                        
+                    </section>
             
                     <section id="history">
                         <h2>Our Rich History</h2>
