--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Oxford University Liberal Association (OULA) - Liberal since 1913</title>
-    <meta name="description" content="Oxford University's Liberal Association - Liberal since 1913.">
+    <meta name="description" content="Oxford University's Liberal Association - Liberal since 1913. Formerly the Oxford University Liberal Democrats. The Beating Heart of Liberalism at Oxford. Join us today!">
     <meta name="author" content="Hayden Williams">
 
     <!-- mobile specific metas
