Add 'Theo Jupp' to committee page

--- a/committee.html
+++ b/committee.html
@@ -193,6 +193,20 @@
                 </div>
             </div>
 
+            <!-- The Senior Ex-President Card -->
+            <div class="col-md-4 mb-4">
+              <div class="card h-100">
+                  <img src="images/committee/senior-ex-pres-mt24.jpg" class="card-img-top" alt="The Vice-President Emeritus" style="object-fit: cover; height: 300px;">
+                  <div class="card-body">
+                      <h2 class="card-title">The Senior Ex-President</h2>
+                      <h3 class="card-fullname">Theo Jupp</h3>
+                      <p class="card-college"><i>St Peter's College</i></p>
+                      <p class="card-text">The Senior Ex-President is the person who has most recently left the office of President. They serve as an adviser to the Executive and chairs the Emeritus Committee (which deals with electoral complaints and disciplinary matters). Theo is a Councillor in Summertown, and recently stood as a Parliamentary Candidate in Oxford East.<p>
+                  </div>
+              </div>
+          </div>
+
+
         </div>
     </section>
 
