Add analytics to committee.html

--- a/committee.html
+++ b/committee.html
@@ -249,7 +249,7 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "07ece4e9475a4cbb92f682afe5f07054"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 <footer class="site-footer">
   <div class="container">
