--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Oxford University Liberal Association (OULA) - Liberal since 1913</title>
-    <meta name="description" content="Oxford University's Liberal Association - Liberal since 1913. Formerly the Oxford University Liberal Democrats. The Beating Heart of Liberalism at Oxford. Join us today!">
+    <meta name="description" content="Oxford University's Liberal Association - Liberal since 1913.">
     <meta name="author" content="Hayden Williams">
 
     <!-- mobile specific metas
@@ -43,37 +43,40 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 
     <nav class="navbar navbar-expand-sm ld-bg navbar-dark sticky-top">
-      <div class="container-fluid">
+        <div class="container-fluid">
         <a class="navbar-brand" href="index.html"> <img src="images/logo-banner.svg" alt="Homepage" style="width: 480px; height: 270px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-          <ul class="navbar-nav">
+            <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="about.html" style="color: #FAA61A;">About</a>
+                <a class="navbar-nav nav-link" href="about.html" style="color: #FAA61A;">About</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="committee.html" style="color: #FAA61A;">Committee</a>
+                <a class="navbar-nav nav-link" href="committee.html" style="color: #FAA61A;">Committee</a>
+            </li>
+            <li class="nav-item"></li>
+                <a class="navbar-nav nav-link" href="events.html" style="color: #FAA61A;">Events</a>
+                </li>
+            <li class="nav-item">
+                <a class="navbar-nav nav-link" href="documents.html" style="color: #FAA61A;">Documents</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="documents.html" style="color: #FAA61A;">Documents</a>
+                <a class="navbar-nav nav-link" href="donate.html" style="color: #FAA61A;">Donate</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="donate.html" style="color: #FAA61A;">Donate</a>
+                <a class="navbar-nav nav-link" href="alumni.html" style="color: #FAA61A;">Alumni</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="alumni.html" style="color: #FAA61A;">Alumni</a>
+                <a class="navbar-nav nav-link" href="contact.html" style="color: #FAA61A;">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="navbar-nav nav-link" href="contact.html" style="color: #FAA61A;">Contact</a>
+                <a class="nav-link join-us" href="join.html" style="color: #FAA61A;">JOIN</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link join-us" href="join.html" style="color: #FAA61A;">JOIN</a>
-            </li>
-          </ul>
+            </ul>
         </div>
-      </div>
+        </div>
     </nav>
 </head>
 
@@ -141,6 +144,7 @@
           <li><a href="join.html">Join</a></li>
           <li><a href="documents.html">Documents</a></li>
           <li><a href="committee.html">Committee</a></li>
+          <li><a href="events.html">Events</a></li>
           <li><a href="alumni.html">Alumni</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="donate.html">Donate</a></li>
