--- a/mailing-list.html
+++ b/mailing-list.html
@@ -88,7 +88,7 @@
         <div class="row">
             <div class="col-md-8 mx-auto">
                 <h2>Join the OULA Mailing List (NOT membership)</h2>
-                <p><a href="https://forms.gle/1t6ToTeL8JZg6SEc9">Click here for the OULA Mailing List Subscription Form (NOT MEMBERSHIP)</a></p>
+                <p><a href="https://forms.gle/WHWtBEenYXhimuH18">Click here for the OULA Mailing List Subscription Form (NOT MEMBERSHIP)</a></p>
                 <h3>... are you looking for membership of OULA instead?</h3>
                 <p><a href="join.html">Click here to access our 'join' page for OULA</a></p>
                 
