Update events with Outlook notice and remove Outlook button

--- a/events.html
+++ b/events.html
@@ -108,15 +108,18 @@
                         <a href="https://calendar.google.com/calendar/ical/2f847e8a87ceb528f4a11459d43ffb1d3b2623e29f0d44236da355d85b756984%40group.calendar.google.com/public/basic.ics" class="btn-calendar btn-apple">
                             Add to Apple Calendar
                         </a>
-                        <a href="https://calendar.google.com/calendar/ical/2f847e8a87ceb528f4a11459d43ffb1d3b2623e29f0d44236da355d85b756984%40group.calendar.google.com/public/basic.ics" class="btn-calendar btn-outlook">
-                            Add to Outlook
-                        </a>
                         <a href="https://calendar.google.com/calendar/ical/2f847e8a87ceb528f4a11459d43ffb1d3b2623e29f0d44236da355d85b756984%40group.calendar.google.com/public/basic.ics" class="btn-calendar btn-ical">
                             Download iCal File
                         </a>
                     </div>
+                    
                   </div>
-                  <h2>Issues accessing our Events Calendar? [Accessibility]</h2>
+                  <h2>Looking for Outlook?</h2>
+                  <p>Unfortunately due to recent changes by Microsoft to Outlook, it is no longer possible to subscribe to our calendar in (mobile) Outlook.
+                    Whilst we appreciate many University of Oxford students use this calendar academically, we recommend using either a personal Apple or Google calendar if you wish to subscribe to our Events.
+                    Finally, please note that our events are always accessible on this page and in your Term Card.</p>
+
+                  <h2>Calendar and Events Accessibility</h2>
                   <a href="mailto:accessandwelfare@oxuniliberals.com" class="btn-email">Email: The Access, Welfare Officer</a>
               </main>
               
