--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
      <section class="presidents-welcome container my-5">
         <div class="row">
             <div class="col-md-8 mx-auto">
-                <h2>Welcome from The President</h2>
+                <h2>Welcome from The President!</h2>
                 <div class="d-flex align-items-start">
                     <img src="images/president-mt24.jpg" alt="MT24 President Profile" style="width: 150px; height: 150px; margin-right: 20px;">
                     <div>
