Update name site-wide

--- a/alumni.html
+++ b/alumni.html
@@ -5,8 +5,8 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Oxford University Liberal Association (OULA) - Liberal since 1913</title>
-    <meta name="description" content="Oxford University's Liberal Association - Liberal since 1913.">
+    <title>Oxford Students Liberal Association (OSLA) - Liberal since 1913</title>
+    <meta name="description" content="Oxford Students Liberal Association - Liberal since 1913. Liberalism for Oxford Students.">
     <meta name="author" content="Hayden Williams">
 
     <!-- mobile specific metas
@@ -82,7 +82,7 @@
 
 <body>
     <header class="container text-center my-5">
-        <h1>OULA Alumni</h1>
+        <h1>OSLA Alumni</h1>
     </header>
     <section class="contact-section container my-7">
         <div class="row">
@@ -95,7 +95,7 @@
       <div class="row">
           <div class="col-md-12">
               <h1>Oxford University Liberal Democrats ... and our other historical names!</h1>
-              <p>The Oxford University Liberal Democrats changed its name in Trinity 2024 to the Oxford University Liberal Association. Predecessor Societies also include the OU Social and Liberal Democrats, Oxford Students Alliance Society, Oxford Students Liberal Society, Oxford Union of Liberal Students and OU Liberal Club. if you've ever been a member of OULD or any of its predecessors, we would be delighted to hear from you as we try to build our alumni networks up!</p>
+              <p>The Oxford University Liberal Democrats changed its name in MT 2024 to the Oxford Students Liberal Association. Predecessor Societies also include the OU Social and Liberal Democrats, Oxford Students Alliance Society, Oxford Students Liberal Society, Oxford Union of Liberal Students and OU Liberal Club. if you've ever been a member of OULD or any of its predecessors, we would be delighted to hear from you as we try to build our alumni networks up!</p>
           </div>
       </div>
     </section>
@@ -148,10 +148,10 @@
   <div class="container">
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="images/logo.svg" alt="OULA Logo" width="480" height="270">
+        <img src="images/logo.svg" alt="OSLA Logo" width="480" height="270">
       </div>
       <div class="footer-links">
-        <h3>OULA Quick Links</h3>
+        <h3>OSLA Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
@@ -165,7 +165,7 @@
         </ul>
       </div>
       <div class="footer-social">
-        <h3>Follow OULA!</h3>
+        <h3>Follow OSLA!</h3>
         <ul>
           <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
@@ -173,12 +173,12 @@
         </ul>
       </div>
       <div class="footer-subscribe">
-        <h3><a href="mailing-list.html">Click here to join OULA's Mailing List</a></h3>
+        <h3><a href="mailing-list.html">Click here to join OSLA's Mailing List</a></h3>
                 
       </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright 2024 - The Oxford University Liberal Association (OULA) - Liberal since 1913</p>
+      <p>Copyright 2024 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
       <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
     </div>
   </div>
