--- a/events.html
+++ b/events.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-<head>
+  <head>
 
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Oxford University Liberal Association (OULA) - Liberal since 1913</title>
-    <meta name="description" content="Oxford University's Liberal Association - Liberal since 1913.">
+    <title>Oxford Students Liberal Association (OSLA) - Liberal since 1913</title>
+    <meta name="description" content="Oxford Students Liberal Association - Liberal since 1913. Liberalism for Oxford Students.">
     <meta name="author" content="Hayden Williams">
 
     <!-- mobile specific metas
@@ -79,7 +79,6 @@
         </div>
     </nav>
 </head>
-
 <body>
 
     <!-- home
@@ -94,13 +93,13 @@
                           src="https://calendar.google.com/calendar/embed?src=2f847e8a87ceb528f4a11459d43ffb1d3b2623e29f0d44236da355d85b756984%40group.calendar.google.com&ctz=Europe%2FLondon"
                           style="border: 0; width: 100%; height: 600px; margin: 0; padding: 0;"
                           loading="lazy"
-                          title="OULA's Events Official Google Calendar"
+                          title="OSLA's Events Official Google Calendar"
                           allowfullscreen>
                       </iframe>
                   </div>
                   <!-- Subscribe Buttons -->
                   <div class="subscribe-buttons">
-                    <h2>Subscribe to OULA Events [See our events in your calendar]</h2>
+                    <h2>Subscribe to OSLA Events [See our events in your calendar]</h2>
                     <div class="button-group">
                         <a href="https://calendar.google.com/calendar/r?cid=2f847e8a87ceb528f4a11459d43ffb1d3b2623e29f0d44236da355d85b756984@group.calendar.google.com" class="btn-calendar btn-google" target="_blank" rel="noopener">
                             Add to Google Calendar
@@ -154,10 +153,10 @@
   <div class="container">
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="images/logo.svg" alt="OULA Logo" width="480" height="270">
+        <img src="images/logo.svg" alt="OSLA Logo" width="480" height="270">
       </div>
       <div class="footer-links">
-        <h3>OULA Quick Links</h3>
+        <h3>OSLA Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
@@ -171,7 +170,7 @@
         </ul>
       </div>
       <div class="footer-social">
-        <h3>Follow OULA!</h3>
+        <h3>Follow OSLA!</h3>
         <ul>
           <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
@@ -179,12 +178,12 @@
         </ul>
       </div>
       <div class="footer-subscribe">
-        <h3><a href="mailing-list.html">Click here to join OULA's Mailing List</a></h3>
+        <h3><a href="mailing-list.html">Click here to join OSLA's Mailing List</a></h3>
                 
       </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright 2024 - The Oxford University Liberal Association (OULA) - Liberal since 1913</p>
+      <p>Copyright 2024 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
       <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
     </div>
   </div>
