--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Oxford University Liberal Association (OULA) - Liberal since 1913</title>
-    <meta name="description" content="The University of Oxford's Liberal Association - Liberal since 1913.">
+    <title>Oxford Students Liberal Association (OSLA) - Liberal since 1913</title>
+    <meta name="description" content="Oxford Students Liberal Association - Liberal since 1913. Liberalism for Oxford Students.">
     <meta name="author" content="Hayden Williams">
 
     <!-- mobile specific metas
@@ -91,9 +91,9 @@
                 <div class="d-flex align-items-start">
                     <img src="images/president-mt24.jpg" alt="MT24 President Profile" style="width: 150px; height: 150px; margin-right: 20px;">
                     <div>
-                        <p>Welcome to the Oxford University Liberal Association! </p>
+                        <p>Welcome to the Oxford Students Liberal Association! </p>
                         <p>
-                          We are Oxford's foremost Liberal Society- and are always keen to have new members. Whether you consider yourself to be an ardent Liberal or are simply interested in meeting new people and enjoying some of our lively debates and numerous socials - you will always be welcome with us. OULA aims to be the beating heart of Liberalism at the University, regularly hosting prominent Liberal Democrat speakers and joint events with the other student political societies. 
+                          We are Oxford's foremost Liberal Society- and are always keen to have new members. Whether you consider yourself to be an ardent Liberal or are simply interested in meeting new people and enjoying some of our lively debates and numerous socials - you will always be welcome with us. OSLA aims to be the beating heart of Liberalism at the University, regularly hosting prominent Liberal Democrat speakers and joint events with the other student political societies. 
                         </p>
                         <p>
                           Throughout this website, fabulously put together by our Outreach Officer Hayden Williams, you will find everything you need about our society; from the termly magazine to the membership form - and of course the all important termcard! Members of the Committee are always keen to hear from new and prospective members so feel free to reach out to any one of us. 
@@ -135,10 +135,10 @@
   <div class="container">
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="images/logo.svg" alt="OULA Logo" width="480" height="270">
+        <img src="images/logo.svg" alt="OSLA Logo" width="480" height="270">
       </div>
       <div class="footer-links">
-        <h3>OULA Quick Links</h3>
+        <h3>OSLA Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
@@ -152,7 +152,7 @@
         </ul>
       </div>
       <div class="footer-social">
-        <h3>Follow OULA!</h3>
+        <h3>Follow OSLA!</h3>
         <ul>
           <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
@@ -160,12 +160,12 @@
         </ul>
       </div>
       <div class="footer-subscribe">
-        <h3><a href="mailing-list.html">Click here to join OULA's Mailing List</a></h3>
+        <h3><a href="mailing-list.html">Click here to join OSLA's Mailing List</a></h3>
                 
       </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright 2024 - The Oxford University Liberal Association (OULA) - Liberal since 1913</p>
+      <p>Copyright 2024 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
       <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
     </div>
   </div>
