--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Oxford University Liberal Association (OULA) - Liberal since 1913</title>
-    <meta name="description" content="Oxford University's Liberal Association - Liberal since 1913.">
+    <title>Oxford Students Liberal Association (OSLA) - Liberal since 1913</title>
+    <meta name="description" content="Oxford Students Liberal Association - Liberal since 1913. Liberalism for Oxford Students.">
     <meta name="author" content="Hayden Williams">
 
     <!-- mobile specific metas
@@ -92,7 +92,7 @@
                 <p>Email The President at: <a href="mailto:president@oxuniliberals.com">president@oxuniliberals.com</a></p>
                 <p>OR ... The President also regularly reviews Direct Messages on our <a href="https://www.instagram.com/oxuniliberals/">Instagram</a>, so please feel free to reach out there!</p>
                 <h1>Targeted Committee Enquiries</h1>
-                <p>For specific queries, for example, regarding the Returning Officer, please visit the Committee page: <a href="committee.html">oxuniliberals.com/committee</a></p>
+                <p>For specific queries, for example, regarding the Returning Officer, please visit the Committee page: <a href="committee.html">Click here to visit The Committee page</a></p>
             
             </div>
             <div class="col-md-6">
@@ -134,10 +134,10 @@
   <div class="container">
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="images/logo.svg" alt="OULA Logo" width="480" height="270">
+        <img src="images/logo.svg" alt="OSLA Logo" width="480" height="270">
       </div>
       <div class="footer-links">
-        <h3>OULA Quick Links</h3>
+        <h3>OSLA Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
@@ -151,7 +151,7 @@
         </ul>
       </div>
       <div class="footer-social">
-        <h3>Follow OULA!</h3>
+        <h3>Follow OSLA!</h3>
         <ul>
           <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
@@ -159,15 +159,14 @@
         </ul>
       </div>
       <div class="footer-subscribe">
-        <h3><a href="mailing-list.html">Click here to join OULA's Mailing List</a></h3>
+        <h3><a href="mailing-list.html">Click here to join OSLA's Mailing List</a></h3>
                 
       </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright 2024 - The Oxford University Liberal Association (OULA) - Liberal since 1913</p>
+      <p>Copyright 2024 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
       <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
     </div>
   </div>
 </footer>
-
 </html>
