--- a/donate.html
+++ b/donate.html
@@ -5,8 +5,8 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Oxford University Liberal Association (OULA) - Liberal since 1913</title>
-    <meta name="description" content="Oxford University's Liberal Association - Liberal since 1913.">
+    <title>Oxford Students Liberal Association (OSLA) - Liberal since 1913</title>
+    <meta name="description" content="Oxford Students Liberal Association - Liberal since 1913. Liberalism for Oxford Students.">
     <meta name="author" content="Hayden Williams">
 
     <!-- mobile specific metas
@@ -90,7 +90,7 @@
                 <main>
                     <section id="about">
                         <h2>Help Us Continue to Spread Our Message</h2>
-                        <p>The Oxford University Liberal Association (OULA) is the oldest political society in Oxford, supporting Liberalism for over 100 years. 
+                        <p>The Oxford Students Liberal Association (OSLA) is the oldest political society in Oxford, supporting Liberalism for over 100 years. 
                             Our purpose is to support and promote Liberalism at Oxford ... but we need your support to help us do that!</p>
                         <a href="mailto:president@oxuniliberals.com" class="btn-email">Please click here to email The President about donating to us</a>
                     </section>
@@ -128,10 +128,10 @@
   <div class="container">
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="images/logo.svg" alt="OULA Logo" width="480" height="270">
+        <img src="images/logo.svg" alt="OSLA Logo" width="480" height="270">
       </div>
       <div class="footer-links">
-        <h3>OULA Quick Links</h3>
+        <h3>OSLA Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
@@ -145,7 +145,7 @@
         </ul>
       </div>
       <div class="footer-social">
-        <h3>Follow OULA!</h3>
+        <h3>Follow OSLA!</h3>
         <ul>
           <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
@@ -153,11 +153,12 @@
         </ul>
       </div>
       <div class="footer-subscribe">
-        <h3><a href="mailing-list.html">Click here to join OULA's Mailing List</a></h3>
+        <h3><a href="mailing-list.html">Click here to join OSLA's Mailing List</a></h3>
+                
       </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright 2024 - The Oxford University Liberal Association (OULA) - Liberal since 1913</p>
+      <p>Copyright 2024 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
       <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
     </div>
   </div>
