--- a/mailing-list.html
+++ b/mailing-list.html
@@ -5,8 +5,8 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Oxford University Liberal Association (OULA) - Liberal since 1913</title>
-    <meta name="description" content="Oxford University's Liberal Association - Liberal since 1913.">
+    <title>Oxford Students Liberal Association (OSLA) - Liberal since 1913</title>
+    <meta name="description" content="Oxford Students Liberal Association - Liberal since 1913. Liberalism for Oxford Students.">
     <meta name="author" content="Hayden Williams">
 
     <!-- mobile specific metas
@@ -87,10 +87,10 @@
      <section class="presidents-welcome container my-5">
         <div class="row">
             <div class="col-md-8 mx-auto">
-                <h2>Join the OULA Mailing List (NOT membership)</h2>
-                <p><a href="https://forms.gle/WHWtBEenYXhimuH18">Click here for the OULA Mailing List Subscription Form (NOT MEMBERSHIP)</a></p>
-                <h3>... are you looking for membership of OULA instead?</h3>
-                <p><a href="join.html">Click here to access our 'join' page for OULA</a></p>
+                <h2>Join the OSLA Mailing List (NOT membership)</h2>
+                <p><a href="https://forms.gle/WHWtBEenYXhimuH18">Click here for the OSLA Mailing List Subscription Form (NOT MEMBERSHIP)</a></p>
+                <h3>... are you looking for membership of OSLA instead?</h3>
+                <p><a href="join.html">Click here to access our 'join' page for OSLA</a></p>
                 
             </div>
         </div>
@@ -123,10 +123,10 @@
   <div class="container">
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="images/logo.svg" alt="OULA Logo" width="480" height="270">
+        <img src="images/logo.svg" alt="OSLA Logo" width="480" height="270">
       </div>
       <div class="footer-links">
-        <h3>OULA Quick Links</h3>
+        <h3>OSLA Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="join.html">Join</a></li>
@@ -140,7 +140,7 @@
         </ul>
       </div>
       <div class="footer-social">
-        <h3>Follow OULA!</h3>
+        <h3>Follow OSLA!</h3>
         <ul>
           <li><a href="https://x.com/oxunilibdems/"><i class="fab fa-twitter"></i></a></li>
           <li><a href="https://www.instagram.com/oxuniliberals/"><i class="fab fa-instagram"></i></a></li>
@@ -148,12 +148,12 @@
         </ul>
       </div>
       <div class="footer-subscribe">
-        <h3><a href="mailing-list.html">Click here to join OULA's Mailing List</a></h3>
+        <h3><a href="mailing-list.html">Click here to join OSLA's Mailing List</a></h3>
                 
       </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright 2024 - The Oxford University Liberal Association (OULA) - Liberal since 1913</p>
+      <p>Copyright 2024 - The Oxford Students Liberal Association (OSLA) - Liberal since 1913</p>
       <a href="https://www.haydenwilliams.dev/">Website by Hayden Williams</a>
     </div>
   </div>
