--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
             
             </div>
             <div class="col-md-6">
-                <img src="images/hero-bg.jpg" alt="Oxford" class="img-fluid">
+                <img src="images/oxford-grad-bg.jpeg" alt="Oxford" class="img-fluid">
             </div>
         </div>
     </section>
