Update committee page to update VP Emeritus

--- a/committee.html
+++ b/committee.html
@@ -270,9 +270,9 @@
                     <img src="images/committee/vice-president-emeritus-mt24.jpeg" class="card-img-top" alt="The Vice-President Emeritus" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Vice-President Emeritus</h2>
-                        <h3 class="card-fullname">Heather Judge</h3>
+                        <h3 class="card-fullname">Sebastian Evans</h3>
                         <p class="card-college"><i>The Queen's College</i></p>
-                        <p class="card-text">The Vice-President Emeritus is the person who has most recently left the office of Vice-President. The Vice-President Emeritus acts as an expert advisor to The President.<p>
+                        <p class="card-text">The Vice-President Emeritus is the person who has most recently left the office of Vice-President. The Vice-President Emeritus acts as an expert advisor to The President should this be required.<p>
                         
                     </div>
                 </div>
