Update Social Secretary with profile picture image

--- a/committee.html
+++ b/committee.html
@@ -149,7 +149,7 @@
             <!-- The Social Secretary Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.png" class="card-img-top" alt="The Returning Officer" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/social-sec-mt24.JPG" class="card-img-top" alt="The Returning Officer" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Social Secretary</h2>
                         <h3 class="card-fullname">Lauren Crabtree</h3>
