Update VP after election result

--- a/committee.html
+++ b/committee.html
@@ -107,8 +107,8 @@
                     <img src="images/logo.png" class="card-img-top" alt="The Vice-President" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Vice-President (The Secretary)</h2>
-                        <h3 class="card-fullname">VACANT</h3>
-                        <p class="card-college"><i>All Souls College</i></p>
+                        <h3 class="card-fullname">Richanne Davies</h3>
+                        <p class="card-college"><i>College of the Great Hall (University College)</i></p>
                         <p class="card-text">The Vice-President is the second-in-command at the Society and helps The President with day-to-day operations, strategy and implementing Committee and Executive wishes.</p>
                         <a href="mailto:vicepresident@oxuniliberals.com" class="btn-email">Email: The Vice-President</a>
                     </div>
