--- a/committee.html
+++ b/committee.html
@@ -104,7 +104,7 @@
             <!-- Vice-President Card -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="images/logo.png" class="card-img-top" alt="The Vice-President" style="object-fit: cover; height: 300px;">
+                    <img src="images/committee/vice-president-mt24.jpg" class="card-img-top" alt="The Vice-President" style="object-fit: cover; height: 300px;">
                     <div class="card-body">
                         <h2 class="card-title">The Vice-President (The Secretary)</h2>
                         <h3 class="card-fullname">Richanne Davies</h3>
