Add Alumni docs area and button on website

--- a/documents.html
+++ b/documents.html
@@ -97,6 +97,7 @@
                     <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Minutes">Minutes</a></button>
                     <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Elections">Elections</a></button>
                     <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Honorary%20Officers%20List">Honorary Officers</a></button>
+                    <button class="btn-email mx-auto" type="button" style="color: #FFFFFF; background-color: #000000;"><a href="https://github.com/Oxford-University-Liberal-Association/documents-archive/tree/main/Documents/Alumni">Alumni</a></button>
                 </div>
             </div>
         </div>
